--- a/landing.001/index.html
+++ b/landing.001/index.html
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
-<html b:css='false' b:defaultwidgetversion='2' b:layoutsVersion='3' b:responsive='true' b:templateUrl='indie.xml' b:templateVersion='1.3.3' expr:dir='data:blog.languageDirection' expr:lang='data:blog.locale' xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr' class="no-js" lang="en">
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="x-ua-compatible" content="ie=edge"/>
@@ -22,33 +21,6 @@
         <link rel="stylesheet" href="https:css/style.css"/>
         <link rel="stylesheet" href="https:css/responsive.css"/>
         <b:skin><![CDATA[]]></b:skin>
-        <style>
-          :root{--width:320px;--fontSize:16px}
-          #bb-form{display:none;position:absolute;z-index:100;left:0;top:0;justify-content:center;align-items:center;width:100%;height:100%;overflow:auto;background-color:#000;background-color:rgba(0,0,0,.4)}
-          #ContactForm1{font-size:var(--fontSize);width:375px;padding-top:35px;padding-bottom:35px;margin:auto;background-color:#F7F6F4}
-          #ContactForm1 .contact-form-widget{width:var(--width);margin:auto}
-          #ContactForm1 .title{display:none;width:var(--width);margin:10px auto 35px auto;font-size:30px;font-weight:300}
-          button,input[inputmode=numeric],input[type=text],textarea{font-family:inherit;font-size:var(--fontSize);border:none;outline:#E59802}
-          button,*[data-control]{cursor:pointer}
-          fieldset{border:none;padding:unset;margin-bottom:25px!important}
-          label{display:inline-block;width:120px}
-          #form-shopping-product>span{display:inline-block;width:100%;font-size:19px;font-weight:700;line-height:1.5;word-space:-2px}
-          #form-shopping-product>small{font-weight:500;color:#0c80e3;margin-top:10px;display:inline-block;font-size:14px}
-          input.bb-form-control{margin-left:10px;float:right;background-color:#ED6B5B}
-          input.bb-form-control:hover{background-color:#575A6D}
-          #form-shopping-quantity>span{display:inline-flex;border-radius:10px;overflow:hidden;border:1px solid #5e99f6}
-          #form-shopping-quantity>span>button{outline:0;padding:10px 15px;width:40px}
-          #form-shopping-quantity>span>input{text-align:center;width:45px;padding:10px;background-color:#f8f8f8}
-          #form-shopping-quantity>span>button{color:#5e99f6;background-color:#fff}
-          #form-shopping-quantity>span>button:hover{background-color:#e6e6e6}
-          #form-shopping-lastCost{font-weight:700}
-          #form-contact-email,#form-contact-message,#form-contact-name{display:none}
-          #ContactForm1_contact-form-submit,#form-contact-address-bb>input,#form-contact-message-bb>textarea,#form-contact-name-bb>input,#form-contact-phone-bb>input{width:var(--width);border:1px solid #5e99f6;border-radius:4px;height:42px;padding:8px 15px;line-height:1.5;margin:auto;display:block;box-sizing:border-box}
-          #form-contact-message-bb>textarea{height:100px;resize:none}
-          #ContactForm1_contact-form-submit,.bb-form-control{color:#fff;font-weight:700;width:150px;height:48px;border-radius:30px;font-size:var(--fontSize);text-transform:uppercase;background-color:#3786C9;border:none;display:inline-block}
-          #ContactForm1_contact-form-submit:hover,.bb-form-control:hover{background-color:#B4C640}
-          #form-notification>p{width:var(--width);color:#F2CAC8;display:initial}
-        </style>
     </head>
     <body>
         <b:section id="nothing" class="main" showaddelement="yes"></b:section>
