--- a/landing.001/index.html
+++ b/landing.001/index.html
@@ -26,7 +26,10 @@
         <main class="main-area fix">
 
             <section>
-                <h1>Hello world!</h1>
+                <div>
+                    <h1>Hello world!</h1>
+                    <p>This is the first paragraph I made for testing purpose.</p>
+                </div>
             </section>
 
             <!-- banner-area -->
