--- a/landing.001/index.html
+++ b/landing.001/index.html
@@ -29,6 +29,7 @@
                 <div>
                     <h1>Hello world!</h1>
                     <p>This is the first paragraph I made for testing purpose.</p>
+                    <p>Also the first time I learn how to code</p>
                 </div>
             </section>
 
