--- a/landing.001/index.html
+++ b/landing.001/index.html
@@ -30,6 +30,7 @@
                     <h1>Hello world!</h1>
                     <p>This is the first paragraph I made for testing purpose.</p>
                     <p>Also the first time I learn how to code</p>
+                    <p>Great, it's working for me at the moment</p>
                 </div>
             </section>
 
