--- a/landing.001/index.html
+++ b/landing.001/index.html
@@ -29,13 +29,7 @@
                 <div>
                     <h1>Hello world!</h1>
                     <p>This is the first paragraph I made for testing purpose.</p>
-                    <p>Also the first time I learn how to code</p>
-                    <p>Great, it's working for me at the moment</p>
-                    <p>Great, it's working for me at the moment</p>
-                    <p>Great, it's working for me at the moment</p>
-                    <p>Great, it's working for me at the moment</p>
-                    <p>Great, it's working for me at the moment</p>
-                    <p>Great, it's working for me at the moment</p>
+                    <p>First, restart Visual Studio Code. Then try to commit & push again. If it still doesn't work, restart it again and this time, don't forget to write a message while committing.</p>
                 </div>
             </section>
 
